--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Map of MLB Parks - DC Openshift3 Roadshow</title> 
+  <title>Map of MLB Parks</title> 
   	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
 	<!--[if lte IE 8]>
     	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
@@ -32,6 +32,7 @@
 </head>
 <body>
 	<h1 id="title">MLB Stadiums using OpenShift 3</h1>
+	<h2 id="subtitle"></h2>Openshift3 Roadshow - Washington, DC</h2>
 	<div id="map"></div>
 	<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script> 
 	<script>
